--- a/Vitralizer/Vitralizer/Vitralizer.csproj
+++ b/Vitralizer/Vitralizer/Vitralizer.csproj
@@ -72,9 +72,14 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Vectorizer.cs" />
+    <Compile Include="XAFwk\Color.cs" />
+    <Compile Include="XAFwk\Image.cs" />
+    <Compile Include="XAFwk\Operations.cs" />
+    <Compile Include="XAFwk\Pixel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Game1.cs" />
+    <Compile Include="Application.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
